--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Thu Sep 28 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.4-0
+- Convert to using the simplib_sysctl kernel.shmall fact
+
 * Mon Apr 17 2017 Nick Miller <nick.miller@onyxpoint.com> - 5.0.3-0
 - Add class to manage polkit rules for libvirt
 - Update puppet requirement in metadata.json
