--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+* Tue Jun 26 2018 Nick Miller <nick.miller@onyxpoint.com> - 5.1.1-0
+- Update CI assets
+- Support Puppet 5
+- Support OEL
+
 * Mon Dec 04 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.1.0-0
 - Added a `libvirt_br_netfilter_loaded` fact to determine if the `br_netfilter`
   kernel module is loaded on the target system
@@ -5,6 +10,7 @@
 - Data in modules update
 - Use `ensure_packages` for package installation
 - Fully decouple `libvirt::ksm` from the main `libvirt` class
+- Add support for Puppet 5 and OEL
 
 * Thu Nov 02 2017 Nick Miller <nick.miller@onyxpoint.com> - 5.1.0-0
 - Use kmod::load instead of ruby script for loading the kernel module
@@ -176,4 +182,3 @@
 
 * Tue Nov 10 2009 Trevor Vaughan <tvaughan@onyxpoint.com> 0.1-0
 - Initial offering.
-
