--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,7 @@
-* Tue Jun 26 2018 Nick Miller <nick.miller@onyxpoint.com> - 5.1.1-0
+* Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 5.2.0-0
+- Update Hiera 4 to Hiera 5
+
+* Tue Jun 26 2018 Nick Miller <nick.miller@onyxpoint.com> - 5.2.0-0
 - Update CI assets
 - Support Puppet 5
 - Support OEL
