--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Tue Apr 23 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 5.2.2-0
+- Updated .travis.yml, .gitlab-ci.yml, .ruby-version
+
 * Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 5.2.1-0
 - Update the upper bound of stdlib to < 6.0.0
 - Workaround a change in behavior of ensure_packages with stdlib 5.x.
