--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,11 @@
-* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 5.2.3-0
+* Wed Dec 18 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.3.0-0
+- Add support for EL8
+- Update README.md
+- Add REFERENCE.md
+- Fix issues with module data
+- Split out install and service into separate classes
+
+* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 5.3.0-0
 - Support puppetlabs/stdlib 6.x and puppet 6.x.
 
 * Wed Jun 12 2019 judy johnson <judyfinkjohnson@gmail.com> - 5.2.2-0
