--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 * Fri Dec 18 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.3.1
 - Removed EL6 support
+- Set default VM type to rhel7.
 
 * Wed Dec 18 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.3.0-0
 - Add support for EL8
