(SIMP-9780) Puppetsync: Remove Puppet 5, Support 7
This patch:

  * Removes Puppet 5 from `metadata.json` and the GHA & GLCI matrix
  * Ensures support for Puppet 7 in `metadata.json`
    * Ensures Pup 7 for module deps stdlib and concat (if present)
  * Updates GLCI and GHA matrix to model Puppet PE using Puppet 6.22.1
  * Bumps Gemfile's simp-rake-helpers and simp-beaker-helpers min vers
  * Removes `.pmtignore` and adds `.pdkignore`

The patch enforces a standardized asset baseline using simp/puppetsync,
and may apply other updates to ensure conformity.

[SIMP-9815] #close
[SIMP-9780] #comment Drop Puppet 5 in pupmod-simp-libvirt
[SIMP-9670] #comment update Puppet 6.22.1 in pupmod-simp-libvirt
[SIMP-9606] #comment Switch pupmod-simp-libvirt from .pmtignore to .pdkignore
[SIMP-9781] #comment bump Gemfile versions in pupmod-simp-libvirt

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+* Tue Jun 15 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.4.0
+- Removed support for Puppet 5
+- Ensured support for Puppet 7 in requirements and stdlib
+
 * Fri Dec 18 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.3.1
 - Removed EL6 support
 - Set default VM type to rhel7.
