--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.6.0
+- Add RockyLinux 8 support
+
 * Tue Jul 13 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.5.0
 - Migrate to puppet/kmod
 
