--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Tue Jun 10 2025 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.9.2
+- Fix rubocop issues
+
 * Wed Jan 17 2024 Richard Gardner <rick@sicura.us> - 5.9.1
 - Updated hiera.yaml facts to support puppet 8
 
