Cleanup for puppet-lint

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
-* Tue Jun 10 2025 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.9.2
-- Fix rubocop issues
+* Thu Sep 11 2025 Steven Pritchard <steve@sicura.us> - 5.9.2
+- Clean up for rubocop and puppet-lint
 
 * Wed Jan 17 2024 Richard Gardner <rick@sicura.us> - 5.9.1
 - Updated hiera.yaml facts to support puppet 8
